--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "type": "git",
     "url": "https://github.com/Wildhoney/Relayed.git"
   },
+  "bin": {
+    "relayed": "./bin/relayed.sh"
+  },
   "keywords": [
     "CORS",
     "AJAX",
