--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "grunt": "~0.4.2",
     "grunt-contrib-jshint": "~0.8.0",
-    "minimist": "0.0.8"
+    "minimist": "0.0.8",
+    "colors": "~0.6.2"
   }
 }
