--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "grunt": "~0.4.2",
     "grunt-contrib-jshint": "~0.8.0",
     "minimist": "0.0.8",
-    "colors": "~0.6.2"
+    "cli-color": "~0.2.3",
+    "pad": "0.0.4"
   }
 }
